# project-template

./: .buildinfo  .circle.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  _check_estimators.py  api.html  appveyor.yml  circle.yml  enviornment.yml  genindex.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  quick_start.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  template.html  user_guide.html  user_guide.md  user_guide.rst
.circleci/: config.yml
.github/workflows/: deploy-gh-pages.yml  lint.yml  python-app.yml  tests.yml
HQC/: HQC.py  __init__.py
HQC/tests/: test_common.py  test_template.py
_downloads/: plot_classifier.ipynb  plot_template.ipynb  plot_transformer.ipynb
_downloads/084669b45b226af6f637ab8457c8c5aa/: plot_classifier.py
_downloads/33e3b8fda2687ae96879282d905830b7/: plot_template.ipynb
_downloads/35939d2f12dbb3de2b921c8a33dd72c2/: plot_transformer.py
_downloads/5b2cebfab9d8cca4393d66b1e4b8a8e7/: plot_transformer.ipynb
_downloads/fed3e85cac62fc93e088aa8cb008d467/: plot_classifier.ipynb
_modules/: index.html
_modules/skltemplate/: template.html
_sources/: index.rst.txt  quick_start.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt
_sources/auto_examples/: index.rst.txt  index.txt  plot_classifier.rst.txt  plot_classifier.txt  plot_template.rst.txt  plot_template.txt  plot_transformer.rst.txt  plot_transformer.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
_static/css/: project-template.css
auto_examples/: index.html  plot_classifier.html  plot_template.html  plot_transformer.html  sg_execution_times.html
ci_scripts/: test.sh
ci_scripts/travis/: .test.sh.swp  install.sh  success.sh  test.sh
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  quick_start.rst  stub.rst  user_guide.rst
doc/_static/css/: project-template.css
doc/_templates/: sidebar-search-bs.html
doc/examples/: plot_stub.py
doc/sphinxext/: gen_rst.py
docs/: api.rst  conf.py  index.rst  user_guide.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  user_guide.doctree
docs/_build/doctrees/auto_examples/: index.doctree  plot_HQC.doctree  sg_execution_times.doctree
docs/_build/html/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_guide.html
docs/_build/html/_downloads/e4119612ad679ec25e339b99e957fd9c/: plot_HQC.ipynb
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/HQC/: HQC.html
docs/_build/html/_sources/: user_guide.rst.txt
docs/_build/html/_sources/auto_examples/: sg_execution_times.rst.txt
docs/_build/html/_static/: basic.css  documentation_options.js
docs/_build/html/auto_examples/: index.html  plot_HQC.html  sg_execution_times.html
docs/auto_examples/: index.rst  plot_HQC.py.md5  plot_HQC.rst  plot_HQC_codeobj.pickle
examples/: README.txt  plot_HQC.py  plot_classifier.py  plot_stub.py  plot_template.py  plot_transformer.py
scripts/: install.sh  push_doc.sh  test.sh
skldemo/: __init__.py  hello.py
skldemo/demo/: __init__.py  demo_estimator.py
skldemo/demo/tests/: test_demo.py
skldemo/tests/: test_common.py
sklstub/: __init__.py  stub.py
sklstub/tests/: test_common.py  test_stub.py
skltemplate/: __init__.py  _list_estimators.py  _template.py  _version.py  template.py
skltemplate/tests/: test_common.py  test_template.py
skltemplate/utils/: __init__.py  discovery.py
skltemplate/utils/tests/: test_discovery.py
